feat(openapi): update OpenAPI specs for patch product endpoint
